@@ -52,7 +52,21 @@ class TestColumnTypes(unittest.TestCase):
     def test_date(self):
         self.assertIsInstance(DateType().create_column(None, 1), DateColumn)
 
-    def test_cast(self):
+    def test_date_cast_format(self):
+        date_type = DateType(date_format='%m-%d-%Y')
+
+        values = ('03-01-1994', '02-17-1011', None, '01-05-1984', 'n/a')
+        casted = tuple(date_type.cast(v) for v in values)
+        self.assertSequenceEqual(casted, (
+            datetime.date(1994, 3, 1),
+            datetime.date(1011, 2, 17),
+            None,
+            datetime.date(1984, 1, 5),
+            None
+        ))
+   
+
+    def test_date_cast_parser(self):
         values = ('3-1-1994', '2/17/1011', None, 'January 5th, 1984', 'n/a')
         casted = tuple(DateType().cast(v) for v in values)
         self.assertSequenceEqual(casted, (
